--- a/jaleApp/src/main/resources/templates/reserva/listReserva.html
+++ b/jaleApp/src/main/resources/templates/reserva/listReserva.html
@@ -38,13 +38,12 @@
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/vehicles/list}">
+				th:href="@{/conductors/list}">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-leaf"></i>
 				</div>
-				<div class="sidebar-brand-text mx-2">JaleAPP Vehiculos</div>
+				<div class="sidebar-brand-text mx-2">JaleAPP Conductores</div>
 			</a>
-			
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
@@ -62,43 +61,42 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
 
-				</div>
+					</div>
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
+					</div>
 				</div>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
-
-				</div>
-				</div>	
-				
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/states/list}">Estados de viaje</a>
+						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>
+
+					</div>
+				</div>
+
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/states/list}">Estados de
+							viaje</a>
 
 					</div>
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/viajes/list}">Viajes
-						</a>
+						<a class="collapse-item" th:href="@{/viajes/list}">Viajes </a>
 					</div>
 
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/rutas/list}">Rutas
-						</a>
+						<a class="collapse-item" th:href="@{/rutas/list}">Rutas </a>
 					</div>
 
 				</div>
@@ -110,6 +108,7 @@
 					</div>
 
 				</div>
+				
 				</li>
 
 
@@ -186,8 +185,8 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Vehiculos</h1>
-					<a th:href="@{/vehicles/new/}" class="btn btn-danger btn-xs">Nuevo</a>
+					<h1 class="h3 mb-4 text-gray-800">Reservas</h1>
+					<a th:href="@{/reservas/new/}" class="btn btn-danger btn-xs">Nuevo</a>
 
 
 
@@ -197,22 +196,19 @@
 						<thead class="thead-light">
 							<tr>
 								<th scope="col">Id</th>
-								<th scope="col">Placa</th>
-								<th scope="col">Revision</th>
-								<th scope="col">Marca</th>
+								<th scope="col">Ruta</th>
 								<th scope="col">Conductor</th>
-								<th scope="col">DNI</th>
+								<th scope="col">Fecha</th>
+
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="e: ${listaVehiculos}">
-								<td th:text="${e.idVehiculo}"></td>
-								<td th:text="${e.placaVehiculo}"></td>
-								<td th:text="${e.revisionVehiculo}"></td>
-								<td th:text="${e.marcaVehiculo}"></td>
-								<td th:text="${e.conductor.nameConductor}"></td>
-								<td th:text="${e.conductor.DNI}"></td>
-								<td><a th:href="@{/vehicles/delete?id=}+${e.idVehiculo}"
+							<tr th:each="e: ${listaReservas}">
+								<td th:text="${e.id}"></td>
+								<td th:text="${e.rut.Fruta}"></td>
+								<td th:text="${e.con.nameConductor}"></td>
+								<td th:text="${e.fecha}"></td>
+								<td><a th:href="@{/reservas/delete?id=}+${e.id}"
 									class="btn btn-danger"><i class="fa fa-trash"
 										aria-hidden="true"></i></a></td>
 
@@ -270,7 +266,7 @@
 							onclick="document.getElementById('logoutForm').submit();"
 							type="submit">Cerrar</button>
 						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/vehicles/list}">Cancel</button>
+							th:href="@{/passengers/list}">Cancel</button>
 					</form>
 				</div>
 			</div>
