--- a/jaleApp/src/main/resources/templates/conductor/listConductor.html
+++ b/jaleApp/src/main/resources/templates/conductor/listConductor.html
@@ -61,23 +61,64 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
 
-				</div>
+					</div>
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
 
+					</div>
+					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/conductors/listFind}">Buscar Conductores</a>
+
+					</div>
 				</div>
+					
+					
+					
 				</div>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
-				<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>
+
+					</div>
+				</div>
+
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/states/list}">Estados de
+							viaje</a>
+
+					</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/viajes/list}">Viajes </a>
+					</div>
 
 				</div>
-				</div>				
-				</li>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/rutas/list}">Rutas </a>
+					</div>
+
+				</div>
+
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/reservas/list}">Reservas
+						</a>
+					</div>
+
+				</div></li>
 
 
 
@@ -167,12 +208,13 @@
 								<th scope="col">DNI</th>
 								<th scope="col">Nombre</th>
 								<th scope="col">Email</th>
-								<th scope="col">Direccion</th>
-								<th scope="col">TIU</th>
+								<!--<th scope="col">Direccion</th>-->
+								<!--<th scope="col">TIU</th>-->
 								<th scope="col">Descripcion</th>
 								<th scope="col">Numero de Cuenta</th>
-								<th scope="col">Saldo</th>
-								<th scope="col">Deuda</th>
+								<th scope="col">Total de saldo</th>
+								<th scope="col">Operacion</th>
+								<th scope="col">Operacion</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -180,15 +222,18 @@
 								<td th:text="${e.idConductor}"></td>
 								<td th:text="${e.DNI}"></td>
 								<td th:text="${e.nameConductor}"></td>
-								<td th:text="${e.emailConductor}"></td>
+								<!--<td th:text="${e.emailConductor}"></td>-->
 								<td th:text="${e.addressConductor}"></td>
-								<td th:text="${e.TIU}"></td>
+								<!--<td th:text="${e.TIU}"></td>-->
 								<td th:text="${e.descriptionConductor}"></td>
 								<td th:text="${e.accountNumber}"></td>
-								<td th:text="${e.balanceFavor}"></td>
-								<td th:text="${e.balanceDebt}"></td>
+								<td th:text="${(e.balanceFavor)-(e.balanceDebt)}"></td>
+
 								<td><a th:href="@{/conductors/delete?id=}+${e.idConductor}"
 									class="btn btn-danger"><i class="fa fa-trash"
+										aria-hidden="true"></i></a></td>
+								<td><a th:href="@{'/conductors/detalle/'+${e.idConductor}}"
+									class="btn btn-danger"><i class="fa fa-pen"
 										aria-hidden="true"></i></a></td>
 
 							</tr>
