--- a/jaleApp/src/main/resources/templates/ruta/listRuta.html
+++ b/jaleApp/src/main/resources/templates/ruta/listRuta.html
@@ -38,13 +38,12 @@
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/vehicles/list}">
+				th:href="@{/conductors/list}">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-leaf"></i>
 				</div>
-				<div class="sidebar-brand-text mx-2">JaleAPP Vehiculos</div>
+				<div class="sidebar-brand-text mx-2">JaleAPP Conductores</div>
 			</a>
-			
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
@@ -102,7 +101,6 @@
 					</div>
 
 				</div>
-				
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
@@ -110,6 +108,7 @@
 					</div>
 
 				</div>
+							
 				</li>
 
 
@@ -186,8 +185,8 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Vehiculos</h1>
-					<a th:href="@{/vehicles/new/}" class="btn btn-danger btn-xs">Nuevo</a>
+					<h1 class="h3 mb-4 text-gray-800">Rutas</h1>
+					<a th:href="@{/rutas/new/}" class="btn btn-danger btn-xs">Nuevo</a>
 
 
 
@@ -197,22 +196,26 @@
 						<thead class="thead-light">
 							<tr>
 								<th scope="col">Id</th>
-								<th scope="col">Placa</th>
-								<th scope="col">Revision</th>
-								<th scope="col">Marca</th>
-								<th scope="col">Conductor</th>
-								<th scope="col">DNI</th>
+								<th scope="col">Inicio</th>
+								<th scope="col">Fin</th>
+								<th scope="col">Distancia</th>
+								<th scope="col">Duracion</th>
+								<th scope="col">Pasajero</th>
+								<th scope="col">Costo</th>
+								
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="e: ${listaVehiculos}">
-								<td th:text="${e.idVehiculo}"></td>
-								<td th:text="${e.placaVehiculo}"></td>
-								<td th:text="${e.revisionVehiculo}"></td>
-								<td th:text="${e.marcaVehiculo}"></td>
-								<td th:text="${e.conductor.nameConductor}"></td>
-								<td th:text="${e.conductor.DNI}"></td>
-								<td><a th:href="@{/vehicles/delete?id=}+${e.idVehiculo}"
+							<tr th:each="e: ${listaRutas}">
+								<td th:text="${e.Cruta}"></td>
+								<td th:text="${e.Druta}"></td>
+								<td th:text="${e.Fruta}"></td>
+								<td th:text="${e.distance}"></td>
+								<td th:text="${e.time}"></td>
+								<td th:text="${e.pass.namePasajero}"></td>
+								<td th:text="${e.costo}"></td>
+								
+								<td><a th:href="@{/rutas/delete?id=}+${e.Cruta}"
 									class="btn btn-danger"><i class="fa fa-trash"
 										aria-hidden="true"></i></a></td>
 
@@ -270,7 +273,7 @@
 							onclick="document.getElementById('logoutForm').submit();"
 							type="submit">Cerrar</button>
 						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/vehicles/list}">Cancel</button>
+							th:href="@{/passengers/list}">Cancel</button>
 					</form>
 				</div>
 			</div>
