--- a/jaleApp/src/main/resources/templates/viaje/listViaje.html
+++ b/jaleApp/src/main/resources/templates/viaje/listViaje.html
@@ -61,9 +61,22 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/passengers/list}">Pasajeros</a>
 
-					</div>
-					
 				</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/conductors/list}">Conductores</a>
+
+				</div>
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
+
+				</div>
+				</div>	
 				
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
@@ -80,7 +93,21 @@
 					</div>
 
 				</div>
-				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/rutas/list}">Rutas
+						</a>
+					</div>
+
+				</div>
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/reservas/list}">Reservas </a>
+					</div>
+
+				</div>
 				
 				
 				</li>
@@ -172,6 +199,7 @@
 								<th scope="col">Id</th>
 								<th scope="col">Nombre de viaje</th>
 								<th scope="col">Costo del viaje</th>
+								<th scope="col">Reservacion</th>
 								<th scope="col">Estado del viaje</th>
 								
 							</tr>
@@ -180,7 +208,8 @@
 							<tr th:each="e: ${listViaje}">
 								<td th:text="${e.idViaje}"></td>
 								<td th:text="${e.nameViaje}"></td>
-								<td th:text="${e.priceViaje}"></td>
+								<td th:text="${e.reservacion.rut.costo}"></td>
+								<td th:text="${e.reservacion.rut.Fruta}"></td>
 								<td th:text="${e.state.Dstate}"></td>
 								
 								<td><a th:href="@{/viajes/delete?id=}+${e.idViaje}"
