--- a/jaleApp/src/main/resources/templates/conductor/listConductor.html
+++ b/jaleApp/src/main/resources/templates/conductor/listConductor.html
@@ -76,7 +76,23 @@
 						<a class="collapse-item" th:href="@{/vehicles/list}">Vehiculos</a>						
 
 				</div>
-				</div>				
+				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/viajes/list}">Viaje</a>						
+
+				</div>
+				</div>
+				
+								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+					data-parent="#accordionSidebar">
+				<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/states/list}">Estado de Viaje</a>						
+
+				</div>
+				</div>					
 				</li>
 
 
